--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + Peact + TS</title>
-  </head>
+    <title>TempsBDN</title>
+    <link rel="icon" type="image/svg" href="/vite.svg" />
 
+  </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
