--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TempsBDN</title>
-    <link rel="icon" type="image/svg" href="/vite.svg" />
+    <link rel="icon" type="image/svg" href="/badalona.svg" />
 
   </head>
   <body>
