--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="m-auto w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
